ci: circleci/docker improve JVM settings for cloud native applications
Took 24 minutes