@@ -1,9 +1,7 @@
 #!/usr/bin/env sh
-echo "------- [DEFAULT JAVA OPTIONS] -------"
-java -XX:+PrintFlagsFinal
-echo "------- [CONFIGURED JAVA OPTIONS] -------"
-JAVA_TOOL_OPTIONS="-XX:+UnlockExperimentalVMOptions -XX:+UseSerialGC -XX:+UseCGroupMemoryLimitForHeap -XX:+UseCompressedOops -XX:+UseCompressedClassPointers -XX:+UnlockDiagnosticVMOptions -Xms${APP_XMX} -Xmx${APP_XMX} -Xss512K -XX:MetaspaceSize=64m -XX:MaxMetaspaceSize=64m -XX:MaxDirectMemorySize=36m -XX:MaxRAM=72m"
-java -XX:+PrintFlagsFinal ${JAVA_TOOL_OPTIONS}
+
+JAVA_TOOL_OPTIONS="-XX:+UnlockExperimentalVMOptions -XX:+UseSerialGC -XX:+UseCGroupMemoryLimitForHeap -XX:+UseCompressedOops -XX:+UseCompressedClassPointers -XX:MinHeapFreeRatio=20 XX:MaxHeapFreeRatio=40 -Xss256K -XX:MetaspaceSize=64m -XX:MaxMetaspaceSize=64m -XX:MaxDirectMemorySize=36m -XX:MaxRAM=64m -XX:MaxPermSize=64M -server -Djava.util.concurrent.ForkJoinPool.common.parallelism=4 -XX:+TieredCompilation -XX:TieredStopAtLevel=1"
+JAVA_OPTS=${JAVA_TOOL_OPTIONS}
 echo "------- [APPLICATION STARTED] -------"
-java org.springframework.boot.loader.JarLauncher  -Djava.security.egd=file:/dev/./urandom -Dserver.port=${PORT} ${JAVA_TOOL_OPTIONS}
+java org.springframework.boot.loader.JarLauncher  -Djava.security.egd=file:/dev/./urandom -Dserver.port=${PORT} ${JAVA_OPTS}
 echo "------- [APPLICATION FINISHED] -------"
